# kexec-lite

./: Makefile.am  configure.ac.in  kexec.c  kexec_memory_map.c  kexec_memory_map.h  list.c  list.h  lite.h  simple_allocator.c  simple_allocator.h
arch/arm64/: arch.c  arch.h
arch/powerpc64/: Makefile.am  arch.c  arch.h  kexec_trampoline.S
